Fixup css in latest merge.
1. Don't always scroll.
2. Need 1px padding to prevent vertical scrollbar from always showing?

--- a/src/css/wysihtml5-iframe.css
+++ b/src/css/wysihtml5-iframe.css
@@ -1,8 +1,8 @@
 html, body {
-  padding: 0px;
+  padding: 1px;
   margin: 0px;
   height: auto;
-  overflow: scroll;
+  overflow: auto;
   background-color: transparent;
   line-height: 1.2;
 
